# internal/domain/entities/endpoint.go
@@ -1,22 +1,17 @@
 package entities
 
 import (
-	"encoding/json"
-
 	"github.com/rendau/dop/dopTypes"
 )
 
 type EndpointSt struct {
-	Id     string          `json:"id" db:"id"`
-	AppId  string          `json:"app_id" db:"app_id"`
-	Active bool            `json:"active" db:"active"`
-	Data   json.RawMessage `json:"data" db:"data" swaggertype:"string"`
-
-	App *AppSt `json:"app" db:"-"`
+	Id     string         `json:"id" db:"id"`
+	AppId  string         `json:"app_id" db:"app_id"`
+	Active bool           `json:"active" db:"active"`
+	Data   EndpointDataSt `json:"data" db:"data"`
 }
 
 type EndpointGetParsSt struct {
-	WithApp bool `json:"with_app" form:"with_app"`
 }
 
 type EndpointListParsSt struct {
@@ -27,7 +22,32 @@ type EndpointListParsSt struct {
 }
 
 type EndpointCUSt struct {
-	AppId  *string          `json:"app_id" db:"app_id"`
-	Active *bool            `json:"active" db:"active"`
-	Data   *json.RawMessage `json:"data" db:"data" swaggertype:"string"`
+	AppId  *string         `json:"app_id" db:"app_id"`
+	Active *bool           `json:"active" db:"active"`
+	Data   *EndpointDataSt `json:"data" db:"data"`
+}
+
+// data
+
+type EndpointDataSt struct {
+	Method        string                      `json:"method"`
+	Path          string                      `json:"path"`
+	Backend       EndpointDataBackendSt       `json:"backend"`
+	JwtValidation EndpointDataJwtValidationSt `json:"jwt_validation"`
+	IpValidation  EndpointDataIpValidationSt  `json:"ip_validation"`
+}
+
+type EndpointDataBackendSt struct {
+	CustomPath bool   `json:"custom_path"`
+	Path       string `json:"path"`
+}
+
+type EndpointDataJwtValidationSt struct {
+	Enabled bool     `json:"enabled"`
+	Roles   []string `json:"roles"`
+}
+
+type EndpointDataIpValidationSt struct {
+	Enabled    bool     `json:"enabled"`
+	AllowedIps []string `json:"allowed_ips"`
 }
